--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,16 @@
+/* code copied from https://fonts.google.com/selection/embed */
+@import url('https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap');
+
 :root {
   --primary-color: rgb(25, 160, 43);
 }
 body {
   margin: 0;
+  padding: 0 18px;
+  /* code copied from https://fonts.google.com/selection/embed */
+  font-family: "National Park", sans-serif;
+}
+button, input {
+  /* code copied from https://fonts.google.com/selection/embed */
+  font-family: "National Park", sans-serif;
 }
